iniciando o componente dos testemunhos

--- a/src/index.css
+++ b/src/index.css
@@ -128,3 +128,7 @@
   animation-iteration-count: 2;
   animation-direction: alternate;
 }
+
+.textBorderWhite {
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
