--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 .classic {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(rgb(42, 42, 42), #000);
   background-repeat: no-repeat;
   transition: background-size 1.5s, color 1.5s;
 }
@@ -55,28 +55,28 @@
 
 @keyframes curtainAnimationClassic {
   0% {
-    background-image: linear-gradient(#000, #000);
+    background-image: linear-gradient(rgb(42, 42, 42), #000);
     background-position: 0% 50%;
     background-size: 0% 100%;
   }
 
   25% {
-    background-image: linear-gradient(#000, #000);
+    background-image: linear-gradient(rgb(42, 42, 42), #000);
     background-size: 33% 100%;
   }
 
   50% {
-    background-image: linear-gradient(#000, #000);
+    background-image: linear-gradient(rgb(42, 42, 42), #000);
     background-size: 66% 100%;
   }
 
   75% {
-    background-image: linear-gradient(#000, #000);
+    background-image: linear-gradient(rgb(42, 42, 42), #000);
     background-size: 100% 100%;
   }
 
   100% {
-    background-image: linear-gradient(#000, #000);
+    background-image: linear-gradient(rgb(42, 42, 42), #000);
     background-size: 100% 100%;
     color: #fff;
   }
